--- a/src/app/pages/list/list.component.scss
+++ b/src/app/pages/list/list.component.scss
@@ -1,8 +1,10 @@
 .list {
-    padding: 2rem;
+    padding: 2rem 5rem;
 }
 
 .card {
+    background: transparent;
+    border: none;
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(12em, 1fr));
     gap: 0.5em;
