--- a/src/app/pages/detail/detail.component.html
+++ b/src/app/pages/detail/detail.component.html
@@ -9,14 +9,15 @@
             <p class="description">{{ card.desc }}</p>
         </div>
 
-        <div class="item">
-            <h3 class="title">Tipo </h3>
-            <p class="description"> {{ card.type }} </p>
-        </div>
-
-        <div class="item">
-            <h3 class="title">SubTipo </h3>
-            <p class="description"> {{ card.race }} </p>
+        <div class="division">
+            <div class="item">
+                <h3 class="title">Tipo </h3>
+                <p class="description"> {{ card.type }} </p>
+            </div>
+            <div class="item">
+                <h3 class="title">SubTipo </h3>
+                <p class="description"> {{ card.race }} </p>
+            </div>
         </div>
 
         <table class="table">
